my third project

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="nav">
            <input type="checkbox" id="check">
            <label for="check" class="checkbtn">
-            <i class="fa-solid fa-bars"></i>
-           </label>
+            <i class="fas fa-bars"></i>
+            </label>
           
             <ul>
                 <li><a href="#" style="color: #7f97ff;">Home</a></li>
@@ -192,7 +192,7 @@
         <section class="section6">
             <div class="text4">
                 <h1>Choose Your Plan</h1>
-                <p>When someone does something that they know that thay shouldn't do, did they.</p>
+                <p>When someone does something that they know that they shouldn’t do, did they.</p>
             </div>
             <div class="card">
                 <div class="card1">
@@ -202,12 +202,12 @@
                     <hr>
                     <p>Secure Online Transfer</p>
                     <hr>
-                    <p>Unlimited Style For Interview</p>
+                    <p>Unlimited Styles for interface</p>
                     <hr>
                     <p>Reliable Customer Service</p>
                     <hr>
                     <h1 class="price">$100.00</h1>
-                    <input type="button" value="Buy Now">
+                    <input type="button" value="BUY NOW">
                 </div>
                 <div class="card1">
                     <h1>02</h1>
@@ -216,12 +216,12 @@
                     <hr>
                     <p>Secure Online Transfer</p>
                     <hr>
-                    <p>Unlimited Style For Interview</p>
+                    <p>Unlimited Styles for interface</p>
                     <hr>
                     <p>Reliable Customer Service</p>
                     <hr>
                     <h1 class="price">$200.00</h1>
-                    <input type="button" value="Buy Now">
+                    <input type="button" value="BUY NOW">
                 </div>
                 <div class="card1">
                     <h1>03</h1>
@@ -230,45 +230,43 @@
                     <hr>
                     <p>Secure Online Transfer</p>
                     <hr>
-                    <p>Unlimited Style For Interview</p>
+                    <p>Unlimited Styles for interface</p>
                     <hr>
                     <p>Reliable Customer Service</p>
                     <hr>
                     <h1 class="price">$300.00</h1>
-                    <input type="button" value="Buy Now">
+                    <input type="button" value="BUY NOW">
                 </div>
             </div>
         </section>
 
-    <!--Pricing Table Ends-->
+    <!--Pricing Table End-->
 
-    <!--Footer Starts-->
-
-    <footer>
-        <div class="foot">
-            <div class="foot1">
-               <h3>About Me</h3>
-               <p style="width: 480px;">We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</p>
-               <p>Copyright ©2023 All rights reserved | Kakon Programmer</p> 
+    <!--Footer Start-->
+        <footer>
+            <div class="foot">
+                <div class="foot1">
+                    <h3>About Me</h3>
+                    <p class="abp">We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</p>
+                    <p>Copyright ©2021 All rights reserved | Hablu Programmer</p>
+                </div>
+                <div class="foot1">
+                    <h3>Newsletter</h3>
+                    <p>Stay updated with our latest trends</p>
+                    <input type="text" placeholder="Enter Email Address">
+                    <button>Send</button>
+                </div>
+                <div class="foot1">
+                    <h3>Follow Me</h3>
+                    <p>Let us be social</p>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>                
+                    <i class="fab fa-instagram"></i>  
+                    <i class="fab fa-youtube"></i>  
+                </div>
             </div>
-            <div class="foot1">
-                <h3>Newsletter</h3>
-                <p>Stay updated with our latest trends</p>
-                <input type="text" placeholder="Enter Your Email Address">
-                <button>Send</button>
-            </div>
-            <div class="foot1">
-                <h3>Follow Me</h3>
-                <p>Let us be Social</p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-youtube"></i>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
-
-    <!--Footer Ends-->
+    <!--Footer End-->
    </body>
 </html>
